5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4376/executions/1753_3088.log
== TEST (2019-05-16 18:07:08) 
-- CODE:
x=("chupa minha rola seus merdas")
print(x)
-- OUTPUT:
chupa minha rola seus merdas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:07:15) 
-- CODE:
x=("chupa minha rola seus merdas")
print(x)
-- OUTPUT:
chupa minha rola seus merdas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:07:19) 
-- CODE:
x=("chupa minha rola seus merdas")
print(x)
-- OUTPUT:
chupa minha rola seus merdas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:07:42) 
-- CODE:
c=("nzklfnsodf")
print(c)
-- OUTPUT:
nzklfnsodf
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:23:47) 
-- CODE:
input(bnshuhf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(bnshuhf)
NameError: name 'bnshuhf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:24:05) 
-- CODE:
input("bnshuhf")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(bnshuhf)
NameError: name 'bnshuhf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
